      and NUMERIC will return a precision of 254 for server versions older than
      5.0.3, 64 for versions 5.0.3-5.0.5 and 65 for versions newer than 5.0.5.
    
    - Fixed BUG#29852 - Closing a load-balanced connection would cause a
      ClassCastException.
    
    - Fixed BUG#27867 - Schema objects with identifiers other than
      the connection character aren't retrieved correctly in 
      ResultSetMetadata.  
      
07-19-07 - Version 5.0.7

    - Setting the configuration parameter "useCursorFetch" to "true" for
      MySQL-5.0+ enables the use of cursors that allow Connector/J to save
      memory by fetching result set rows in chunks (where the chunk size
      is set by calling setFetchSize() on a Statement or ResultSet) by
      using fully-materialized cursors on the server.

      The driver will will now automatically set "useServerPrepStmts" to
      "true" when "useCursorFetch" has been set to "true", since the feature
      requires server-side prepared statements in order to function.

	- Fixed BUG#28469 - PreparedStatement.getMetaData() for statements
	  containing leading one-line comments is not returned correctly.

	  As part of this fix, we also overhauled detection of DML for
	  executeQuery() and SELECTs for executeUpdate() in plain and
	  prepared statements to be aware of the same  types of comments.

    - Added configuration property "useNanosForElapsedTime" - for
      profiling/debugging functionality that measures elapsed time,
      should the driver try to use nanoseconds resolution if available
      (requires JDK >= 1.5)?

    - Added configuration property "slowQueryThresholdNanos" - if
      "useNanosForElapsedTime" is set to "true", and this property
      is set to a non-zero value the driver will use this threshold
      (in nanosecond units) to determine if a query was slow, instead
      of using millisecond units.

      Note, that if "useNanosForElapsedTime" is set to "true", and this