@@ -214,8 +214,16 @@ nn-nn-07 - Version 5.0.8
     
     - Fixed BUG#27867 - Schema objects with identifiers other than
       the connection character aren't retrieved correctly in 
-      ResultSetMetadata.  
+      ResultSetMetadata.
       
+    - Fixed BUG#28689 - CallableStatement.executeBatch() doesn't work when 
+      connection property "noAccessToProcedureBodies" has been set to "true".
+     
+      The fix involves changing the behavior of "noAccessToProcedureBodies",in 
+      that the driver will now report all paramters as "IN" paramters
+      but allow callers to call registerOutParameter() on them without throwing
+      an exception.
+
 07-19-07 - Version 5.0.7
 
     - Setting the configuration parameter "useCursorFetch" to "true" for
